--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
         "vuex": "^3.6.2"
     },
     "dependencies": {
-        "admin-lte": "^3.0.5"
+        "admin-lte": "^3.0.5",
+        "sweetalert2": "^11.2.0",
+        "toastr": "^2.1.4",
+        "vform": "^2.1.2",
+        "vue-toasted": "^1.1.28",
+        "vue-toastr": "^2.1.2"
     }
 }
